--- a/home/.htaccess
+++ b/home/.htaccess
@@ -13,8 +13,9 @@ php_value session.gc_maxlifetime 3600
 php_value default_charset "EUC-JP"
 
 # Not found
+<IfModule mod_rewrite.c>
 ErrorDocument 404 /err/
-
+</IfModule>
 
 # Enable RewriteEngine.
 RewriteEngine on
@@ -57,6 +58,8 @@ Redirect permanent /designguide.html http://www.takahama428.com/design/designgui
 Redirect permanent /faq/index.html http://www.takahama428.com/guide/faq.html
 Redirect permanent /first/index.html http://www.takahama428.com/guide/
 
+Redirect 301 /m3/index.html http://www.takahama428.com/index.html
+
 order deny,allow
 
 #smartphone
@@ -66,7 +69,7 @@ order deny,allow
 #RewriteCond %{REQUEST_URI} !/img/
 #RewriteCond %{REQUEST_URI} !^/items/sweat/
 #RewriteCond %{HTTP_USER_AGENT} (iPhone|iPod|Android|BlackBerry|Windows.Phone) [NC]
-#ipad§œPC»«§À°£
+#ipad„ÅØPCÁâà„Å´„ÄÇ
 #RewriteCond %{HTTP_USER_AGENT} !iPad [NC]
 #viewmode=pc
 #RewriteCond %{HTTP_COOKIE} !viewmode=pc
@@ -77,7 +80,7 @@ order deny,allow
 #RewriteEngine On
 #RewriteCond %{REQUEST_URI} ^/m/
 #RewriteCond %{HTTP_USER_AGENT} (iPhone|iPod|Android|BlackBerry|Windows.Phone) [NC]
-#ipad§œPC»«§À°£
+#ipad„ÅØPCÁâà„Å´„ÄÇ
 #RewriteCond %{HTTP_USER_AGENT} !iPad [NC]
 #RewriteRule ^(.*)$ /m3/ [R=301,L]
 
@@ -111,7 +114,7 @@ order deny,allow
 #RewriteEngine On
 #RewriteCond %{REQUEST_URI} ^/items/sweat/
 #RewriteCond %{HTTP_USER_AGENT} (iPhone|iPod|Android|BlackBerry|Windows.Phone) [NC]
-#ipad§œPC»«§À°£
+#ipad„ÅØPCÁâà„Å´„ÄÇ
 #RewriteCond %{HTTP_USER_AGENT} !iPad [NC]
 #RewriteRule ^(.*)$ /m3/items/index.html?c=sweat [R=301,L]
 
@@ -130,7 +133,7 @@ ExpiresByType application/javascript "access plus 7 days"
 ExpiresByType application/x-javascript "access plus 7 days"
 </ifModule>
 
-# ∞µΩÃ§ÚÕ≠∏˙
+# ÂúßÁ∏Æ„ÇíÊúâÂäπ
 AddOutputFilterByType DEFLATE text/plain
 AddOutputFilterByType DEFLATE text/html
 AddOutputFilterByType DEFLATE text/xml
